--- a/app/scss/_typography.scss
+++ b/app/scss/_typography.scss
@@ -34,7 +34,7 @@ font-size:$site-title;
 font-weight: $font-weight-title;
 text-align: center;
 	a{
-		color: $black;
+		color: $col-black;
 
 		&:hover{
 			color: $color1;
@@ -52,7 +52,7 @@ font-size:$entry-title;
 font-weight: $font-weight-title;
 
 	a{
-		color: $black;
+		color: $col-black;
 
 		&:hover{
 			color: $color1;
