--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -2,67 +2,96 @@
 // BASE
 // ***********************************
 
-body{
-	color: $body-text;
+html {
 	margin: 0;
 	padding: 0;
-	background: $color-body-bg;
-	line-height: $line-height-mobile;
-	font-family: $font-family-primary;
-	font-size: $font-size-mobile;
-	font-size: $line-height-mobile;
-	font-weight: $font-weight-body;
+	font-size: $font-size-main;
+}
 
-	@include breakpoint($break-menu){
+*, *:before, *:after {
+	// -moz-box-sizing: border-box;
+	// -webkit-box-sizing: border-box;
+	box-sizing: border-box; 
+}
+
+body {
+	margin: 0;
+	padding: 0;
+	background: $col-black;
+	color: $col-body-txt;
+	font-family: $font-sans;
+	font-size: $font-size-mobile;
+	line-height: $line-height-mobile;
+	font-weight: $font-weight;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+
+	@include breakpoint($mobile-width){
 		font-size: $font-size;
 		line-height: $line-height;
 	}
 }
 
-
-// ***********************************
-// PAGE STRUCTURE
-// ***********************************
-
-//Susy Maps
-$susy: (
-	columns: 12,
-	gutters: 1/2,
-	math: fluid,
-	gutter-position: inside,
-);
-
-#header, #content, .page{
-	overflow: hidden;  // clearfix
+#content {
+	background: $col-body;
 }
 
-.page{
-	@include container($container);
-	background: $white;
-	padding: 0 3%;
-} // page
+// ***********************************
+// DEFAULTS
+// ***********************************
 
-#header{
-	background: $grey-light;
+h2, h3, h4, h5, h6 {
+	font-weight: 400;
+	line-height: 1em;
+	margin: 0;
+}
 
-	#header-wrapper{
-		@include span(12);
-	}	
-} // #header
+h2 {
+	font-size: 3em;
+}
 
-#content{
-	#primary{
-		@include span(12);
-		@include breakpoint($break-menu) {
-		    @include span(8);
-		 }
+h3 {
+	font-size: 2em;
+}
+
+h4 {
+	font-size: 1.8em;
+}
+
+h5 {
+	font-size: 1.4em;
+}
+
+h6 {
+	font-size: .6em;
+}
+
+a, a:visited, a:active {
+	font-family: $font-sans;
+	font-weight: 700;
+	letter-spacing: .5pt;
+	text-decoration: none;
+	border: none;
+	outline: none;
+}
+
+ul li {
+	list-style: inside;
+}
+
+%no-style-ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+
+	li {
+		list-style: none;
 	}
+}
 
-	#aside{
-		@include span(12);
-		@include breakpoint($break-menu) {
-		    @include span(4);
-		 }
-	}	
-} // content
+.noWrap {
+	white-space: nowrap;
+}
 
+.clear {
+	clear: both;
+}
