--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -5,6 +5,8 @@
 // @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 // @import url(http://fonts.googleapis.com/earlyaccess/nanummyeongjo.css);
 
+@import url('http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css');
+
 @font-face {
   font-family: 'Nanum Gothic';
   font-style: normal;
@@ -35,76 +37,107 @@
        url(../fonts/NanumGothic-ExtraBold.woff) format('woff'),
        url(../fonts/NanumGothic-ExtraBold.ttf) format('truetype');
 }
-
-
-@import url('http://fonts.googleapis.com/css?family=Bitter:400,700,400italic');
-//font-family: 'Bitter', serif;
-
-@import url('http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic');
-//font-family: 'Roboto', sans-serif;
+@font-face {
+  font-family: 'Nanum Myeongjo';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/NanumMyeongjo-Regular.eot);
+  src: url(../fonts/NanumMyeongjo-Regular.eot?#iefix) format('embedded-opentype'),
+       url(../fonts/NanumMyeongjo-Regular.woff2) format('woff2'),
+       url(../fonts/NanumMyeongjo-Regular.woff) format('woff'),
+       url(../fonts/NanumMyeongjo-Regular.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Nanum Myeongjo';
+  font-style: normal;
+  font-weight: 600;
+  src: url(../fonts/NanumMyeongjo-Bold.eot);
+  src: url(../fonts/NanumMyeongjo-Bold.eot?#iefix) format('embedded-opentype'),
+       url(../fonts/NanumMyeongjo-Bold.woff2) format('woff2'),
+       url(../fonts/NanumMyeongjo-Bold.woff) format('woff'),
+       url(../fonts/NanumMyeongjo-Bold.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Nanum Myeongjo';
+  font-style: normal;
+  font-weight: 700;
+  src: url(../fonts/NanumMyeongjo-ExtraBold.eot);
+  src: url(../fonts/NanumMyeongjo-ExtraBold.eot?#iefix) format('embedded-opentype'),
+       url(../fonts/NanumMyeongjo-ExtraBold.woff2) format('woff2'),
+       url(../fonts/NanumMyeongjo-ExtraBold.woff) format('woff'),
+       url(../fonts/NanumMyeongjo-ExtraBold.ttf) format('truetype');
+}
 
 
 // LAYOUT
-$container: 1024px;
-$break-menu: 767px;
+$mobile-width: 420px;
+$tablet-width: 640px;
+$laptop-width: 920px;
+$desktop-width: 1024px;
+$wide-width: 1200px;
 
 
 // TYPOGRAPHY
-$font-family-title: 'Roboto', sans-serif;
-$font-family-primary: 'Roboto', sans-serif;  // "Helvetica Neue",Helvetica,Arial,sans-serif
-$font_mono: 10px 'Monaco', monospace;
-$font-weight-title: 400;
-$font-weight-body: 300;
-
-$font-size: 100%; 
-$line-height: 1.625; 
-$font-size-mobile: 100%; 
+$font-size-main: 14px; 
+$font-sans: 'Nanum Gothic', sans-serif;
+$font-serif: 'Nanum Myeongjo', serif;
+$font-weight: 400;
+$font-size: 100%;
+$line-height: 1.625;
+$font-size-mobile: 100%;
 $line-height-mobile: 1.625;
-
-$site-title: 2.2em; 
-$entry-title: 2.5em;
-$h1: 2.5em;
-$h2: 1.4em;
-$h3: 1.4em;
-$h4: 1.2em;
-$h5: 1em;
-$h6: .8em;
+$h1: 18px;
+$h2: 3em;
+$h3: 2.4em;
+$h4: 1.8em;
+$h5: 1.4em;
+$h6: 0.6em;
 
 
 // COLORS
-$white: #fff;
-$black: #3a3a3a; 
-$grey: #ccc;
-$grey-light: lighten( $grey, 16% );
-$grey-dark: darken( $grey, 20% );
+$col-white: #fff;
+$col-black: #202020;
+$col-grey: #dfdfdf;
+$col-grey-l: lighten( $col-grey, 16% );
+$col-grey-d: darken( $col-grey, 10% );
+$col-grey-d1: #afafaf;
+$col-grey-d2: #9d9d9d;
+$col-grey-d3: #4d4d4d;
+$col-grey-d4: #2d2d2d;
 
-$color-body-bg: $grey-light; 
-$color1: #dd4b39;  // red
-$color2: #9CBE26;  // green
+$col-lightBlue: #42a4db;
+$col-mutedBlue: #68adcb;
+$col-mint: #78cac0;
+$col-green: #97b76e;
+$col-purple: #8776b6;
+$col-mustard: #c0b563;
+$col-navy: #5a748c;
+$col-pink: #d08fae;
 
-$body-text: #333333;
+$col-home: $col-mutedBlue;
+$col-home-sub: darken( $col-home, 20% );
 
-$link_color: $color1;
-$link_hover: darken( $color1, 50% );
+$col-stPaulOffice: $col-mint;
+$col-stPaulOffice-sub: darken( $col-stPaulOffice, 20% );
 
-$button-color: $color1;
-$button-color-hover: darken( $button-color, 10% );
-$button-color-disabled: $button-color;
+$col-spiritualLife: $col-green;
+$col-spiritualLife-sub: darken( $col-spiritualLife, 20% );
 
-$nav-bg: #333333; //bar background    
-$nav-interior-bg: #262626; //interior li a
-$nav-link-hover: #00AEEF; //blue
-$nav-text: #444444;
-$nav-text-active: #fff;
+$col-ourParish: $col-purple;
+$col-ourParish-sub: darken( $col-ourParish, 20% );
 
-$notification-message: #0196bb;
-$notification-success: #9abb01;
-$notification-warning: #DD8903;
-$notification-alert: #CF493B;
+$col-community: $col-mustard;
+$col-community-sub: darken( $col-community, 20% );
 
-$panel: $grey-light;
-$panel-callout: $grey-light;
+$col-educationCenter: $col-navy;
+$col-educationCenter-sub: darken( $col-educationCenter, 20% );
 
+$col-gallery: $col-pink;
+$col-gallery-sub: darken( $col-gallery, 20% );
+
+
+$col-body: $col-white;//$col-grey;//
+$col-body-txt: $col-black;
 
 // Other
-$default-border-radius: 5px;
+$border-radius: 5px;
