--- a/app/scss/ui/_panels-notifications.scss
+++ b/app/scss/ui/_panels-notifications.scss
@@ -16,25 +16,25 @@
 
 .notification.message{
 	background: $notification-message;
-	color: $white;
+	color: $col-white;
 	// border: 1px solid darken( $notification-message, 10% );
 }
 
 .notification.success{
 	background: $notification-success;
-	color: $white;
+	color: $col-white;
 	// border: 1px solid darken( $notification-success, 10% );
 }
 
 .notification.warning{
 	background: $notification-warning;
-	color: $white;
+	color: $col-white;
 	// border: 1px solid darken( $notification-warning, 10% );
 }
 
 .notification.alert{
 	background: $notification-alert;
-	color: $white;
+	color: $col-white;
 	// border: 1px solid darken( $notification-alert, 10% );
 }
 
@@ -52,5 +52,5 @@
 
 .panel.callout{
 	background: $color1;
-	color: $white;
+	color: $col-white;
 }
