--- a/app/scss/_sprites.scss
+++ b/app/scss/_sprites.scss
@@ -14,6 +14,8 @@ $spritePNG: url("../images/sprite.png");
 }
 
 
+
+
 .sprite-logo {
 	@extend %sprite-div;
 	position: relative;
@@ -27,6 +29,9 @@ $spritePNG: url("../images/sprite.png");
 		height: 40px;
 	}
 }
+
+
+
 
 .sprite-bell {
 	@extend %sprite-div;
@@ -100,6 +105,9 @@ $spritePNG: url("../images/sprite.png");
 	}
 }
 
+
+
+
 .sprite-search {
 	@extend %sprite-div;
 	position: relative;
@@ -107,6 +115,9 @@ $spritePNG: url("../images/sprite.png");
 	width: 40px;
 	height: 40px;
 }
+
+
+
 
 .sprite-footer-logo {
 	@extend %sprite-div;
@@ -128,6 +139,9 @@ $spritePNG: url("../images/sprite.png");
 	}
 }
 
+
+
+
 .sprite-top-btn {
 	@extend %sprite-div;
 	position: relative;
@@ -141,14 +155,252 @@ $spritePNG: url("../images/sprite.png");
 	background-position: -140px -187px;
 }
 
+
+
+
 .sprite-download {
 	@extend %sprite-div;
 	position: relative;
-	background-position: -300px -190px;
-	width: 14px;
+	background-position: 0 -440px;
+	width: 16px;
+	height: 20px;
+}
+
+.sprite-download.black {
+	background-position: -40px -440px;
+}
+
+.noTouch #content.stPaulHome .hero a.util-box-btn:hover .sprite-download,
+#content.stPaulHome .content-body .sprite-download {
+	background-position: -80px -440px;
+}
+
+.noTouch #content.stPaulOffice .hero a.util-box-btn:hover .sprite-download,
+#content.stPaulOffice .content-body .sprite-download {
+	background-position: -120px -440px;
+}
+
+.noTouch #content.spiritualLife .hero a.util-box-btn:hover .sprite-download,
+#content.spiritualLife .content-body .sprite-download {
+	background-position: -160px -440px;
+}
+
+.noTouch #content.oneCommunity .hero a.util-box-btn:hover .sprite-download,
+#content.oneCommunity .content-body .sprite-download {
+	background-position: -200px -440px;
+}
+
+.noTouch #content.ourParish .hero a.util-box-btn:hover .sprite-download,
+#content.ourParish .content-body .sprite-download {
+	background-position: -240px -440px;
+}
+
+.noTouch #content.educationCenter .hero a.util-box-btn:hover .sprite-download,
+#content.educationCenter .content-body .sprite-download {
+	background-position: -280px -440px;
+}
+
+.noTouch #content.mediaLibrary .hero a.util-box-btn:hover .sprite-download,
+#content.mediaLibrary .content-body .sprite-download {
+	background-position: -320px -440px;
+}
+
+
+
+
+.sprite-link {
+	@extend %sprite-div;
+	position: relative;
+	background-position: 0 -500px;
+	width: 28px;
+	height: 16px;
+}
+
+.sprite-link.black {
+	background-position: -40px -500px;
+}
+
+.noTouch #content.stPaulHome .hero a.util-box-btn:hover .sprite-link,
+#content.stPaulHome .content-body .sprite-link {
+	background-position: -80px -500px;
+}
+
+.noTouch #content.stPaulOffice .hero a.util-box-btn:hover .sprite-link,
+#content.stPaulOffice .content-body .sprite-link {
+	background-position: -120px -500px;
+}
+
+.noTouch #content.spiritualLife .hero a.util-box-btn:hover .sprite-link,
+#content.spiritualLife .content-body .sprite-link {
+	background-position: -160px -500px;
+}
+
+.noTouch #content.oneCommunity .hero a.util-box-btn:hover .sprite-link,
+#content.oneCommunity .content-body .sprite-link {
+	background-position: -200px -500px;
+}
+
+.noTouch #content.ourParish .hero a.util-box-btn:hover .sprite-link,
+#content.ourParish .content-body .sprite-link {
+	background-position: -240px -500px;
+}
+
+.noTouch #content.educationCenter .hero a.util-box-btn:hover .sprite-link,
+#content.educationCenter .content-body .sprite-link {
+	background-position: -280px -500px;
+}
+
+.noTouch #content.mediaLibrary .hero a.util-box-btn:hover .sprite-link,
+#content.mediaLibrary .content-body .sprite-link {
+	background-position: -320px -500px;
+}
+
+
+
+
+.sprite-link-ext {
+	@extend %sprite-div;
+	position: relative;
+	background-position: 0 -470px;
+	width: 29px;
+	height: 16px;
+}
+
+.sprite-link-ext.black {
+	background-position: -40px -470px;
+}
+
+.noTouch #content.stPaulHome .hero a.util-box-btn:hover .sprite-link-ext,
+#content.stPaulHome .content-body .sprite-link-ext {
+	background-position: -80px -470px;
+}
+
+.noTouch #content.stPaulOffice .hero a.util-box-btn:hover .sprite-link-ext,
+#content.stPaulOffice .content-body .sprite-link-ext {
+	background-position: -120px -470px;
+}
+
+.noTouch #content.spiritualLife .hero a.util-box-btn:hover .sprite-link-ext,
+#content.spiritualLife .content-body .sprite-link-ext {
+	background-position: -160px -470px;
+}
+
+.noTouch #content.oneCommunity .hero a.util-box-btn:hover .sprite-link-ext,
+#content.oneCommunity .content-body .sprite-link-ext {
+	background-position: -200px -470px;
+}
+
+.noTouch #content.ourParish .hero a.util-box-btn:hover .sprite-link-ext,
+#content.ourParish .content-body .sprite-link-ext {
+	background-position: -240px -470px;
+}
+
+.noTouch #content.educationCenter .hero a.util-box-btn:hover .sprite-link-ext,
+#content.educationCenter .content-body .sprite-link-ext {
+	background-position: -280px -470px;
+}
+
+.noTouch #content.mediaLibrary .hero a.util-box-btn:hover .sprite-link-ext,
+#content.mediaLibrary .content-body .sprite-link-ext {
+	background-position: -320px -470px;
+}
+
+
+
+
+.sprite-link-sm {
+	@extend %sprite-div;
+	position: relative;
+	background-position: 0 -550px;
+	width: 21px;
 	height: 14px;
 }
 
-.sprite-download.btn1 {
-	background-position: -325px -190px;
+.sprite-link-sm.black {
+	background-position: -40px -550px;
+}
+
+.noTouch #content.stPaulHome .hero a.hero-txt-btn:hover .sprite-link-sm,
+#content.stPaulHome .content-body .sprite-link-sm {
+	background-position: -80px -550px;
+}
+
+.noTouch #content.stPaulOffice .hero a.hero-txt-btn:hover .sprite-link-sm,
+#content.stPaulOffice .content-body .sprite-link-sm {
+	background-position: -120px -550px;
+}
+
+.noTouch #content.spiritualLife .hero a.hero-txt-btn:hover .sprite-link-sm,
+#content.spiritualLife .content-body .sprite-link-sm {
+	background-position: -160px -550px;
+}
+
+.noTouch #content.oneCommunity .hero a.hero-txt-btn:hover .sprite-link-sm,
+#content.oneCommunity .content-body .sprite-link-sm {
+	background-position: -200px -550px;
+}
+
+.noTouch #content.ourParish .hero a.hero-txt-btn:hover .sprite-link-sm,
+#content.ourParish .content-body .sprite-link-sm {
+	background-position: -240px -550px;
+}
+
+.noTouch #content.educationCenter .hero a.hero-txt-btn:hover .sprite-link-sm,
+#content.educationCenter .content-body .sprite-link-sm {
+	background-position: -280px -550px;
+}
+
+.noTouch #content.mediaLibrary .hero a.hero-txt-btn:hover .sprite-link-sm,
+#content.mediaLibrary .content-body .sprite-link-sm {
+	background-position: -320px -550px;
+}
+
+
+
+
+.sprite-link-ext-sm {
+	@extend %sprite-div;
+	position: relative;
+	background-position: 0 -530px;
+	width: 21px;
+	height: 14px;
+}
+
+.sprite-link-ext-sm.black {
+	background-position: -40px -530px;
+}
+
+.noTouch #content.stPaulHome .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+#content.stPaulHome .content-body .sprite-link-ext-sm {
+	background-position: -80px -530px;
+}
+
+.noTouch #content.stPaulOffice .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+#content.stPaulOffice .content-body .sprite-link-ext-sm {
+	background-position: -120px -530px;
+}
+
+.noTouch #content.spiritualLife .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+#content.spiritualLife .content-body .sprite-link-ext-sm {
+	background-position: -160px -530px;
+}
+
+.noTouch #content.oneCommunity .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+#content.oneCommunity .content-body .sprite-link-ext-sm {
+	background-position: -200px -530px;
+}
+
+.noTouch #content.ourParish .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+#content.ourParish .content-body .sprite-link-ext-sm {
+	background-position: -240px -530px;
+}
+
+.noTouch #content.educationCenter .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+#content.educationCenter .content-body .sprite-link-ext-sm {
+	background-position: -280px -530px;
+}
+
+.noTouch #content.mediaLibrary .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+#content.mediaLibrary .content-body .sprite-link-ext-sm {
+	background-position: -320px -530px;
 }
