--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -51,5 +51,6 @@
 @import "sections/404";
 @import "sections/header";
 @import "sections/footer";
-@import "sections/content";
+@import "sections/hero";
+@import "sections/content-body";
 
